Refactor SettingsControllerAdmin for cleaner MFA and session management
- Simplified TOTP, SMS, and Email 2FA initialization methods
- Removed redundant state variables and verification flags
- Consolidated and cleaned up method implementations
- Improved code organization with grouped getters and setters
- Removed unused methods and simplified existing logic