@@ -40,45 +40,47 @@ import java.util.*;
 @SessionScoped
 public class SettingsControllerAdmin implements Serializable {
 
+    // User & Profile
     private Users user;
     private ManagingStaffProfiles managingStaffProfile;
+
+    // Password Management
     private String oldPassword;
     private String newPassword;
     private String confirmNewPassword;
+
+    // Profile Image
     private Medias profileImage;
     private UploadedFile tempUploadedFile;
+
+    // MFA - General
+    private MfaMethods.MfaMethodType selectedPrimaryMethod;
+
+    // MFA - TOTP
     private String totpCode;
     private String qrCodeUrl;
     private String tempSecret;
     private List<String> backupCodes;
-    private boolean showBackupCodes;
-    private MfaMethods currentMfaMethod;
     private final GoogleAuthenticator gAuth = new GoogleAuthenticator();
     private final Gson gson = new Gson();
-    private MfaMethods.MfaMethodType selectedPrimaryMethod;
 
+    // MFA - Email/SMS
     private boolean hasEmailEnabled;
     private boolean hasSMSEnabled;
-    private boolean emailVerificationRequired;
-    private boolean smsVerificationRequired;
     private String emailVerificationCode;
     private String smsVerificationCode;
 
-    @Inject
-    private SettingsServiceAdmin settingsServiceAdmin;
-
-    @Inject
-    private MediaService mediaService;
-
-    @EJB
-    private SessionService sessionService;
-    
+    // Session Management
     private List<UserSessions> sessions;
     private UUID currentSessionId;
 
-
-
-
+    // Injected Services
+    @Inject
+    private SettingsServiceAdmin settingsServiceAdmin;
+    @Inject
+    private MediaService mediaService;
+    @EJB
+    private SessionService sessionService;
 
     @PostConstruct
     public void init() {
@@ -99,9 +101,14 @@ public class SettingsControllerAdmin implements Serializable {
 
         this.user = settingsServiceAdmin.findUserById(currentUser.getId());
         this.managingStaffProfile = settingsServiceAdmin.findManagingStaffProfileByUserId(currentUser.getId());
-        loadProfileImage(); // Load existing profile image
+        loadProfileImage();
     }
 
+    // General.xhtml
+
+    /**
+     * Action method to save personal information
+     */
     private void loadProfileImage() {
         List<Medias> profileMedias = mediaService.findByModelAndModelId("user", user.getId().toString());
         if (!profileMedias.isEmpty()) {
@@ -144,9 +151,6 @@ public class SettingsControllerAdmin implements Serializable {
         }
     }
 
-    /**
-     * Action method to save personal information
-     */
     @Transactional
     public String savePersonalInformation() {
         try {
@@ -207,6 +211,8 @@ public class SettingsControllerAdmin implements Serializable {
         }
     }
 
+    // account.xhtml
+
     /**
      * Action method to update username
      */
@@ -254,6 +260,8 @@ public class SettingsControllerAdmin implements Serializable {
 
         return null;
     }
+
+    // authentication-security.xhtml
 
     /**
      * Action method to update password
@@ -333,144 +341,26 @@ public class SettingsControllerAdmin implements Serializable {
         return null;
     }
 
-    public void reloadSessions() {
-        sessions = null; // Force refresh on next access
-        getSessions(); // Explicitly reload
-    }
-
-    public List<UserSessions> getSessions() {
-        if (sessions == null) {
-            Users currentUser = (Users) FacesContext.getCurrentInstance()
-                .getExternalContext().getSessionMap().get(CommonParam.SESSION_SELF);
-            sessions = sessionService.getActiveSessions(currentUser);
-
-            // Add location parsing for each session
-            sessions.forEach(session -> {
-                String location = sessionService.parseLocationFromIp(session.getIpAddress());
-                String[] parts = location.split(", ");
-                if(parts.length == 3) {
-                    session.setCity(parts[0]);
-                    session.setRegion(parts[1]);
-                    session.setCountry(parts[2]);
-                }
-            });
-        }
-        return sessions;
-    }
-
-    public void revokeSession(UUID sessionId) {
-        sessionService.revokeSession(sessionId);
-        sessions = null; // Refresh session list
-        FacesContext.getCurrentInstance().addMessage(null,
-            new FacesMessage("Session revoked successfully"));
-    }
-
-    public String revokeAllSessions() {
-        Users currentUser = (Users) FacesContext.getCurrentInstance()
-            .getExternalContext().getSessionMap().get(CommonParam.SESSION_SELF);
-        sessionService.revokeAllSessions(currentUser.getId());
-        sessions = null;
-        
-        // Invalidate current session and redirect
-        FacesContext.getCurrentInstance().getExternalContext().invalidateSession();
-        return "/auth.xhtml?faces-redirect=true";
-    }
-
-    // Add viewSessionDetails method if needed
-    public void viewSessionDetails(UserSessions session) {
-        // Implementation for viewing session details
-    }
-
-    public boolean isToday(Date date) {
-        Instant instant = date.toInstant();
-        LocalDate inputDate = instant.atZone(ZoneId.systemDefault()).toLocalDate();
-        LocalDate today = LocalDate.now();
-        return inputDate.isEqual(today);
-    }
-    
-    public UUID getCurrentSessionId() {
-        return currentSessionId;
-    }
-
-    /* Getters and setters */
-    // Update getter/setter
-    public Medias getProfileImage() {
-        return profileImage;
-    }
-
-    public void setProfileImage(Medias profileImage) {
-        this.profileImage = profileImage;
-    }
-
-    public UploadedFile getTempUploadedFile() {
-        return tempUploadedFile;
-    }
-
-    public void setTempUploadedFile(UploadedFile tempUploadedFile) {
-        this.tempUploadedFile = tempUploadedFile;
-    }
-
-    public Users getUser() {
-        return user;
-    }
-
-    public void setUser(Users user) {
-        this.user = user;
-    }
-
-    public ManagingStaffProfiles getManagingStaffProfile() {
-        return managingStaffProfile;
-    }
-
-    public void setManagingStaffProfile(ManagingStaffProfiles managingStaffProfile) {
-        this.managingStaffProfile = managingStaffProfile;
-    }
-
-    public String getOldPassword() {
-        return oldPassword;
-    }
-
-    public void setOldPassword(String oldPassword) {
-        this.oldPassword = oldPassword;
-    }
-
-    public String getNewPassword() {
-        return newPassword;
-    }
-
-    public void setNewPassword(String newPassword) {
-        this.newPassword = newPassword;
-    }
-
-    public String getConfirmNewPassword() {
-        return confirmNewPassword;
-    }
-
-    public void setConfirmNewPassword(String confirmNewPassword) {
-        this.confirmNewPassword = confirmNewPassword;
-    }
-
-    public void initializeTOTP() {
+    public void initializeTOTP2FA() {
         try {
             // Generate new TOTP secret
             GoogleAuthenticatorKey key = gAuth.createCredentials();
             tempSecret = key.getKey();
-            
+
             // Generate QR code URL
-            String otpAuthUrl = GoogleAuthenticatorQRGenerator.getOtpAuthURL(
-                "HostelGuard™", // Your app name
-                user.getEmail(),
-                key);
-            qrCodeUrl = otpAuthUrl;
-            
+            // Your app name
+            qrCodeUrl = GoogleAuthenticatorQRGenerator.getOtpAuthURL(
+                    "HostelGuard™", // Your app name
+                    user.getEmail(),
+                    key);
+
             // Generate backup codes
             backupCodes = generateBackupCodes();
-            showBackupCodes = false;
-            
+
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to initialize 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to initialize 2FA: " + e.getMessage()));
         }
     }
 
@@ -489,11 +379,11 @@ public class SettingsControllerAdmin implements Serializable {
         try {
             // Verify the provided TOTP code
             boolean isCodeValid = gAuth.authorize(tempSecret, Integer.parseInt(totpCode));
-            
+
             if (!isCodeValid) {
                 FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                        "Invalid verification code. Please try again."));
+                        new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                                "Invalid verification code. Please try again."));
                 return;
             }
 
@@ -525,23 +415,22 @@ public class SettingsControllerAdmin implements Serializable {
             totpCode = null;
             qrCodeUrl = null;
             backupCodes = null;
-            showBackupCodes = false;
 
             // Force refresh of user data
             user = settingsServiceAdmin.findUserById(user.getId());
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "Two-factor authentication has been enabled."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "Two-factor authentication has been enabled."));
 
         } catch (NumberFormatException e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Invalid verification code format. Please enter only numbers."));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Invalid verification code format. Please enter only numbers."));
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to enable 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to enable 2FA: " + e.getMessage()));
         }
     }
 
@@ -550,7 +439,7 @@ public class SettingsControllerAdmin implements Serializable {
         try {
             // Refresh the user entity
             user = settingsServiceAdmin.findUserById(user.getId());
-            
+
             // Find and delete all TOTP methods
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(user);
             for (MfaMethods method : mfaMethods) {
@@ -572,49 +461,13 @@ public class SettingsControllerAdmin implements Serializable {
             sessions = null;
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "Two-factor authentication has been disabled."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "Two-factor authentication has been disabled."));
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to disable 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to disable 2FA: " + e.getMessage()));
         }
-    }
-
-    public void toggleShowBackupCodes() {
-        showBackupCodes = !showBackupCodes;
-    }
-
-    public List<String> getBackupCodes() {
-        if (backupCodes != null && !backupCodes.isEmpty()) {
-            return backupCodes;
-        }
-
-        MfaMethods primaryMethod = settingsServiceAdmin.findMfaMethodsByUser(user)
-                .stream()
-                .filter(m -> Boolean.TRUE.equals(m.getEnabled()) && Boolean.TRUE.equals(m.getPrimary()))
-                .findFirst()
-                .orElse(null);
-
-        return primaryMethod != null && primaryMethod.getRecoveryCodes() != null ?
-                gson.fromJson(primaryMethod.getRecoveryCodes(), new TypeToken<List<String>>(){}.getType()) :
-                Collections.emptyList();
-    }
-
-    public boolean isShowBackupCodes() {
-        return showBackupCodes;
-    }
-
-    public String getTotpCode() {
-        return totpCode;
-    }
-
-    public void setTotpCode(String totpCode) {
-        this.totpCode = totpCode;
-    }
-
-    public String getQrCodeUrl() {
-        return qrCodeUrl;
     }
 
     public boolean getHasTOTPEnabled() {
@@ -629,56 +482,40 @@ public class SettingsControllerAdmin implements Serializable {
             }
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(freshUser);
             return mfaMethods.stream()
-                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.TOTP && 
-                             Boolean.TRUE.equals(method.getEnabled()));
+                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.TOTP &&
+                            Boolean.TRUE.equals(method.getEnabled()));
         } catch (Exception e) {
             return false;
         }
     }
 
-    public void toggleTOTP() {
-        try {
-            if (getHasTOTPEnabled()) {
-                disableTOTP();
-            } else {
-                initializeTOTP();
-            }
-            // Force refresh of user data
-            user = settingsServiceAdmin.findUserById(user.getId());
-        } catch (Exception e) {
-            FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to toggle 2FA: " + e.getMessage()));
-        }
-    }
-
     public String getPreferredMfaStatus() {
         List<MfaMethods> enabledMethods = settingsServiceAdmin.findMfaMethodsByUser(user)
-            .stream()
-            .filter(m -> Boolean.TRUE.equals(m.getEnabled()))
-            .toList();
-        
+                .stream()
+                .filter(m -> Boolean.TRUE.equals(m.getEnabled()))
+                .toList();
+
         if (enabledMethods.isEmpty()) {
             return "Disabled";
         }
-        
+
         long primaryCount = enabledMethods.stream()
-            .filter(MfaMethods::getPrimary)
-            .count();
-            
+                .filter(MfaMethods::getPrimary)
+                .count();
+
         if (enabledMethods.size() == 1) {
-            return "Enabled (" + enabledMethods.get(0).getMethod().toString() + ")";
+            return "Enabled (" + enabledMethods.getFirst().getMethod().toString() + ")";
         }
-        
+
         if (primaryCount != 1) {
             return "Multiple methods - needs configuration";
         }
-        
+
         MfaMethods primary = enabledMethods.stream()
-            .filter(MfaMethods::getPrimary)
-            .findFirst()
-            .orElseThrow();
-            
+                .filter(MfaMethods::getPrimary)
+                .findFirst()
+                .orElseThrow();
+
         return "Enabled (" + primary.getMethod().toString() + " as primary)";
     }
 
@@ -686,97 +523,61 @@ public class SettingsControllerAdmin implements Serializable {
         try {
             if (selectedPrimaryMethod == null) {
                 FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                        "Please select a method to set as primary"));
+                        new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                                "Please select a method to set as primary"));
                 return;
             }
 
             List<MfaMethods> allMethods = settingsServiceAdmin.findMfaMethodsByUser(user);
-            
+
             // Update all methods
             for (MfaMethods method : allMethods) {
                 boolean shouldBePrimary = method.getMethod() == selectedPrimaryMethod;
                 method.setPrimary(shouldBePrimary);
                 settingsServiceAdmin.updateMfaMethod(method);
             }
-            
+
             // Clear the selection
             selectedPrimaryMethod = null;
-            
+
             // Refresh the user data
             user = settingsServiceAdmin.findUserById(user.getId());
-            
+
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "Primary authentication method updated"));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "Primary authentication method updated"));
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to update primary method: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to update primary method: " + e.getMessage()));
         }
-    }
-
-    // Add getter/setter for selectedPrimaryMethod
-    public MfaMethods.MfaMethodType getSelectedPrimaryMethod() {
-        return selectedPrimaryMethod;
-    }
-
-    public void setSelectedPrimaryMethod(MfaMethods.MfaMethodType selectedPrimaryMethod) {
-        this.selectedPrimaryMethod = selectedPrimaryMethod;
     }
 
     public List<MfaMethods> getEnabledMfaMethods() {
         return settingsServiceAdmin.findMfaMethodsByUser(user)
-            .stream()
-            .filter(m -> Boolean.TRUE.equals(m.getEnabled()))
-            .toList();
+                .stream()
+                .filter(m -> Boolean.TRUE.equals(m.getEnabled()))
+                .toList();
     }
 
-    public void toggleEmail() {
-        System.out.println("Email 2FA toggle requested. Current status: " + hasEmailEnabled);
-        if(hasEmailEnabled) {
-            disableEmail2FA();
-        } else {
-            enableEmail2FA();
-        }
-    }
-
-    public void toggleSMS() {
-        System.out.println("SMS 2FA toggle requested. Current status: " + hasSMSEnabled);
-        if(hasSMSEnabled) {
-            disableSMS2FA();
-        } else {
-            enableSMS2FA();
-        }
-
-    }
-
-    private void enableSMS2FA() {
+    public void initializeSMS2FA() {
         System.out.println("Enabling SMS 2FA...");
         // Generate mock verification code
         String mockCode = String.format("%06d", new Random().nextInt(999999));
         System.out.println("Mock SMS verification code generated: " + mockCode);
-        
+
         // Generate backup codes
         backupCodes = generateBackupCodes();
-        
-        // Show verification dialog
-        smsVerificationCode = null;
-        smsVerificationRequired = true;
     }
 
-    private void enableEmail2FA() {
+    public void initializeEmail2FA() {
         System.out.println("Enabling Email 2FA...");
         // Generate mock verification code
         String mockCode = String.format("%06d", new Random().nextInt(999999));
         System.out.println("Mock email verification code generated: " + mockCode);
-        
+
         // Generate backup codes
         backupCodes = generateBackupCodes();
-        
-        // Show verification dialog
-        emailVerificationCode = null;
-        emailVerificationRequired = true;
     }
 
     @Transactional
@@ -785,8 +586,8 @@ public class SettingsControllerAdmin implements Serializable {
             // Verify the provided SMS code
             if (smsVerificationCode == null || smsVerificationCode.length() != 6) {
                 FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                        "Invalid verification code. Please enter a 6-digit code."));
+                        new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                                "Invalid verification code. Please enter a 6-digit code."));
                 return;
             }
 
@@ -817,17 +618,16 @@ public class SettingsControllerAdmin implements Serializable {
 
             // Clear verification data but keep backup codes for display
             smsVerificationCode = null;
-            smsVerificationRequired = false;
             hasSMSEnabled = true;
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "SMS two-factor authentication has been enabled. Please save your recovery codes."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "SMS two-factor authentication has been enabled. Please save your recovery codes."));
 
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to enable SMS 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to enable SMS 2FA: " + e.getMessage()));
             smsVerificationCode = null;
             backupCodes = null;
         }
@@ -839,8 +639,8 @@ public class SettingsControllerAdmin implements Serializable {
             // Verify the provided email code
             if (emailVerificationCode == null || emailVerificationCode.length() != 6) {
                 FacesContext.getCurrentInstance().addMessage(null,
-                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                        "Invalid verification code. Please enter a 6-digit code."));
+                        new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                                "Invalid verification code. Please enter a 6-digit code."));
                 return;
             }
 
@@ -868,17 +668,16 @@ public class SettingsControllerAdmin implements Serializable {
 
             // Clear verification data but keep backup codes for display
             emailVerificationCode = null;
-            emailVerificationRequired = false;
             hasEmailEnabled = true;
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "Email two-factor authentication has been enabled. Please save your recovery codes."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "Email two-factor authentication has been enabled. Please save your recovery codes."));
 
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to enable Email 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to enable Email 2FA: " + e.getMessage()));
             emailVerificationCode = null;
             backupCodes = null;
         }
@@ -889,7 +688,7 @@ public class SettingsControllerAdmin implements Serializable {
         try {
             // Refresh the user entity
             user = settingsServiceAdmin.findUserById(user.getId());
-            
+
             // Find and delete all Email MFA methods
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(user);
             for (MfaMethods method : mfaMethods) {
@@ -909,16 +708,15 @@ public class SettingsControllerAdmin implements Serializable {
 
             // Clear state
             hasEmailEnabled = false;
-            emailVerificationRequired = false;
             emailVerificationCode = null;
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "Email two-factor authentication has been disabled."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "Email two-factor authentication has been disabled."));
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to disable Email 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to disable Email 2FA: " + e.getMessage()));
         }
     }
 
@@ -927,7 +725,7 @@ public class SettingsControllerAdmin implements Serializable {
         try {
             // Refresh the user entity
             user = settingsServiceAdmin.findUserById(user.getId());
-            
+
             // Find and delete all SMS MFA methods
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(user);
             for (MfaMethods method : mfaMethods) {
@@ -947,16 +745,15 @@ public class SettingsControllerAdmin implements Serializable {
 
             // Clear state
             hasSMSEnabled = false;
-            smsVerificationRequired = false;
             smsVerificationCode = null;
 
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_INFO, "Success", 
-                    "SMS two-factor authentication has been disabled."));
+                    new FacesMessage(FacesMessage.SEVERITY_INFO, "Success",
+                            "SMS two-factor authentication has been disabled."));
         } catch (Exception e) {
             FacesContext.getCurrentInstance().addMessage(null,
-                new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error", 
-                    "Failed to disable SMS 2FA: " + e.getMessage()));
+                    new FacesMessage(FacesMessage.SEVERITY_ERROR, "Error",
+                            "Failed to disable SMS 2FA: " + e.getMessage()));
         }
     }
 
@@ -972,8 +769,8 @@ public class SettingsControllerAdmin implements Serializable {
             }
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(freshUser);
             return mfaMethods.stream()
-                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.EMAIL && 
-                             Boolean.TRUE.equals(method.getEnabled()));
+                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.EMAIL &&
+                            Boolean.TRUE.equals(method.getEnabled()));
         } catch (Exception e) {
             return false;
         }
@@ -991,34 +788,128 @@ public class SettingsControllerAdmin implements Serializable {
             }
             List<MfaMethods> mfaMethods = settingsServiceAdmin.findMfaMethodsByUser(freshUser);
             return mfaMethods.stream()
-                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.SMS && 
-                             Boolean.TRUE.equals(method.getEnabled()));
+                    .anyMatch(method -> method.getMethod() == MfaMethods.MfaMethodType.SMS &&
+                            Boolean.TRUE.equals(method.getEnabled()));
         } catch (Exception e) {
             return false;
         }
     }
 
-    public String getEmailVerificationCode() {
-        return emailVerificationCode;
+    public List<String> getBackupCodes() {
+        if (backupCodes != null && !backupCodes.isEmpty()) {
+            return backupCodes;
+        }
+
+        MfaMethods primaryMethod = settingsServiceAdmin.findMfaMethodsByUser(user)
+                .stream()
+                .filter(m -> Boolean.TRUE.equals(m.getEnabled()) && Boolean.TRUE.equals(m.getPrimary()))
+                .findFirst()
+                .orElse(null);
+
+        return primaryMethod != null && primaryMethod.getRecoveryCodes() != null ?
+                gson.fromJson(primaryMethod.getRecoveryCodes(), new TypeToken<List<String>>() {
+                }.getType()) :
+                Collections.emptyList();
     }
 
-    public String getSmsVerificationCode() {
-        return smsVerificationCode;
+    public void reloadSessions() {
+        sessions = null; // Force refresh on next access
+        getSessions(); // Explicitly reload
     }
 
+    public List<UserSessions> getSessions() {
+        if (sessions == null) {
+            Users currentUser = (Users) FacesContext.getCurrentInstance()
+                    .getExternalContext().getSessionMap().get(CommonParam.SESSION_SELF);
+            sessions = sessionService.getActiveSessions(currentUser);
+
+            // Add location parsing for each session
+            sessions.forEach(session -> {
+                String location = sessionService.parseLocationFromIp(session.getIpAddress());
+                String[] parts = location.split(", ");
+                if (parts.length == 3) {
+                    session.setCity(parts[0]);
+                    session.setRegion(parts[1]);
+                    session.setCountry(parts[2]);
+                }
+            });
+        }
+        return sessions;
+    }
+
+    public void revokeSession(UUID sessionId) {
+        sessionService.revokeSession(sessionId);
+        sessions = null; // Refresh session list
+        FacesContext.getCurrentInstance().addMessage(null,
+                new FacesMessage("Session revoked successfully"));
+    }
+
+    public String revokeAllSessions() {
+        Users currentUser = (Users) FacesContext.getCurrentInstance()
+                .getExternalContext().getSessionMap().get(CommonParam.SESSION_SELF);
+        sessionService.revokeAllSessions(currentUser.getId());
+        sessions = null;
+
+        // Invalidate current session and redirect
+        FacesContext.getCurrentInstance().getExternalContext().invalidateSession();
+        return "/auth.xhtml?faces-redirect=true";
+    }
+
+    public boolean isToday(Date date) {
+        Instant instant = date.toInstant();
+        LocalDate inputDate = instant.atZone(ZoneId.systemDefault()).toLocalDate();
+        LocalDate today = LocalDate.now();
+        return inputDate.isEqual(today);
+    }
+
+    // Getters & Setters
+    public Users getUser() { return user; }
+    public void setUser(Users user) { this.user = user; }
+
+    public ManagingStaffProfiles getManagingStaffProfile() { return managingStaffProfile; }
+    public void setManagingStaffProfile(ManagingStaffProfiles managingStaffProfile) {
+        this.managingStaffProfile = managingStaffProfile;
+    }
+
+    // Password Fields
+    public String getOldPassword() { return oldPassword; }
+    public void setOldPassword(String oldPassword) { this.oldPassword = oldPassword; }
+    public String getNewPassword() { return newPassword; }
+    public void setNewPassword(String newPassword) { this.newPassword = newPassword; }
+    public String getConfirmNewPassword() { return confirmNewPassword; }
+    public void setConfirmNewPassword(String confirmNewPassword) {
+        this.confirmNewPassword = confirmNewPassword;
+    }
+
+    // Profile Image
+    public Medias getProfileImage() { return profileImage; }
+    public void setProfileImage(Medias profileImage) { this.profileImage = profileImage; }
+    public UploadedFile getTempUploadedFile() { return tempUploadedFile; }
+    public void setTempUploadedFile(UploadedFile tempUploadedFile) {
+        this.tempUploadedFile = tempUploadedFile;
+    }
+
+    // MFA - TOTP
+    public String getTotpCode() { return totpCode; }
+    public void setTotpCode(String totpCode) { this.totpCode = totpCode; }
+    public String getQrCodeUrl() { return qrCodeUrl; }
+
+    // MFA - General
+    public MfaMethods.MfaMethodType getSelectedPrimaryMethod() { return selectedPrimaryMethod; }
+    public void setSelectedPrimaryMethod(MfaMethods.MfaMethodType selectedPrimaryMethod) {
+        this.selectedPrimaryMethod = selectedPrimaryMethod;
+    }
+
+    // MFA - Email/SMS
+    public String getEmailVerificationCode() { return emailVerificationCode; }
+    public void setEmailVerificationCode(String emailVerificationCode) {
+        this.emailVerificationCode = emailVerificationCode;
+    }
+    public String getSmsVerificationCode() { return smsVerificationCode; }
     public void setSmsVerificationCode(String smsVerificationCode) {
         this.smsVerificationCode = smsVerificationCode;
     }
 
-    public void setEmailVerificationCode(String emailVerificationCode) {
-        this.emailVerificationCode = emailVerificationCode;
-    }
-
-    public Boolean getEmailVerificationRequired() {
-        return emailVerificationRequired;
-    }
-
-    public Boolean getSmsVerificationRequired() {
-        return smsVerificationRequired;
-    }
+    // Session Management
+    public UUID getCurrentSessionId() { return currentSessionId; }
 }
